照片和相册删除功能实现
